--- a/lab-9/lab-9/build.gradle
+++ b/lab-9/lab-9/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.4.0'
+    id 'org.springframework.boot' version '3.4.0' // CHANGED from 3.5.8 to 3.4.0
     id 'io.spring.dependency-management' version '1.1.6'
 }
 
@@ -10,13 +10,7 @@ description = 'Demo project for Spring Boot'
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
-    }
-}
-
-configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
+        languageVersion = JavaLanguageVersion.of(17)
     }
 }
 
@@ -25,7 +19,7 @@ repositories {
 }
 
 dependencies {
-    // --- Database Dependencies (Added for Lab 9) ---
+    // --- Database ---
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     runtimeOnly 'com.mysql:mysql-connector-j'
 
@@ -33,12 +27,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-graphql'
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
-    // --- Lombok ---
+    // --- Tools ---
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
     // --- Testing ---
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
